unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/Plant_Asset_Prompt_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores each and every Prompt details and link to the Site/Plant and Parent Prompt also this object will help for smooth navigation between prompts</description>
    <label>Plant Asset Prompt Detail</label>
    <nameField>
        <label>Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Asset Prompt Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>