unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>Plant Asset Prompt Details</relationshipLabel>
    <relationshipName>Plant_Asset_Prompt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>