unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Base_Asset__c.field-meta.xml
<CustomField>
    <fullName>Base_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Asset</label>
    <referenceTo>Base_Asset_Template__c</referenceTo>
    <relationshipLabel>Plant Asset Prompt Details</relationshipLabel>
    <relationshipName>Plant_Asset_Prompt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>