unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Batch_Process_Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process_Record_Identifier__c</fullName>
    <label>Batch Process Record Identifier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>