unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Bulk_Import_Type__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Import_Type__c</fullName>
    <label>Bulk Import Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Base Asset Template Prompts</fullName>
                <default>true</default>
                <label>Single Base Asset Template Prompts</label>
            </value>
            <value>
                <fullName>Multiple Base Asset Template Prompts</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>