unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/CA_Report_Status_For_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>CA_Report_Status_For_Email_Template__c</fullName>
    <formula>IF( ISPICKVAL( Capability_Report_Status__c , &quot;Completed&quot;) , &quot;is ready for review, please run the G1 prompt.&quot; , &quot;could not able to run,please contact your System Engineer.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Report Status For Email Template</label>
    <type>Text</type>
</CustomField>