unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Completeness_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Report_Status__c</fullName>
    <label>Completeness Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Started</fullName>
                <default>true</default>
                <label>Not Yet Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed - Error</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>