unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>CurrencyIsoCode</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>