unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Is_Batch_Executed_For_Metric_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_Batch_Executed_For_Metric_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Batch Executed For Metric Value</label>
    <type>Checkbox</type>
</CustomField>