unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Is_Completeness_Report_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Completeness_Report_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Completeness Report Generated</label>
    <type>Checkbox</type>
</CustomField>