unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Is_Location_Fetched__c.field-meta.xml
<CustomField>
    <fullName>Is_Location_Fetched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Location Fetched</label>
    <type>Checkbox</type>
</CustomField>