unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Is_WA_RollUp_Not_Executed__c.field-meta.xml
<CustomField>
    <fullName>Is_WA_RollUp_Not_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is WA RollUp Not Executed</label>
    <type>Checkbox</type>
</CustomField>