unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Last_Metric_Value_Process_Initiated_DT__c.field-meta.xml
<CustomField>
    <fullName>Last_Metric_Value_Process_Initiated_DT__c</fullName>
    <label>Last Metric Value Process Initiated DT</label>
    <type>DateTime</type>
</CustomField>