unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Last_Process_Initiated_DT__c.field-meta.xml
<CustomField>
    <fullName>Last_Process_Initiated_DT__c</fullName>
    <label>Last Process Initiated DT</label>
    <type>DateTime</type>
</CustomField>