unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Last_Rollup_To_P1W1_Process_Initiated_DT__c.field-meta.xml
<CustomField>
    <fullName>Last_Rollup_To_P1W1_Process_Initiated_DT__c</fullName>
    <label>Last Rollup To P1W1 Process Initiated DT</label>
    <type>DateTime</type>
</CustomField>