unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Parent_Asset_Prompt_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset_Prompt_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset Prompt Name</label>
    <referenceTo>Plant_Asset_Prompt_Detail__c</referenceTo>
    <relationshipLabel>Plant Asset Prompt Details</relationshipLabel>
    <relationshipName>Plant_Asset_Prompt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>