unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Previous_Plant_Asset_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Previous_Plant_Asset_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Plant Asset Prompt</label>
    <referenceTo>Plant_Asset_Prompt_Detail__c</referenceTo>
    <relationshipLabel>Plant Asset Prompt Details (Previous Plant Asset Prompt)</relationshipLabel>
    <relationshipName>Plant_Asset_Prompt_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>