unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Processing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Processing_Completed__c</fullName>
    <formula>IF(AND((Last_Process_Initiated_DT__c== Last_Attr_Value_Process_Initiated_DT__c),
(Last_Attr_Value_Process_Initiated_DT__c==Last_Metric_Value_Process_Initiated_DT__c),
(Last_Metric_Value_Process_Initiated_DT__c == Last_Process_Initiated_DT__c)), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Completed</label>
    <type>Checkbox</type>
</CustomField>