unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Prompt_Information__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Information</label>
    <referenceTo>Prompt_Information__c</referenceTo>
    <relationshipLabel>Plant Asset Prompt Details</relationshipLabel>
    <relationshipName>Plant_Asset_Prompt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>