unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Report_Execution_By_User__c.field-meta.xml
<CustomField>
    <fullName>Report_Execution_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Execution By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plant_Asset_Prompt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>