unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Report_Generated_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Report_Generated_Datetime__c</fullName>
    <label>Report Generated Datetime</label>
    <type>DateTime</type>
</CustomField>