unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Report_Status_For_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Report_Status_For_Email_Template__c</fullName>
    <formula>IF( AND( ISPICKVAL( Capability_Report_Status__c , &quot;Completed&quot;), ISPICKVAL( Completeness_Report_Status__c , &quot;Completed&quot;) ) , TEXT(Capability_Report_Status__c) , &quot;Please Contact Your Administrator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Status For Email Template</label>
    <type>Text</type>
</CustomField>