unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/RFI_Generated_By_User__c.field-meta.xml
<CustomField>
    <fullName>RFI_Generated_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Generated By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plant_Asset_Prompt_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>