unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/RFI_Generated_Datetime__c.field-meta.xml
<CustomField>
    <fullName>RFI_Generated_Datetime__c</fullName>
    <label>RFI Generated Datetime</label>
    <type>DateTime</type>
</CustomField>