unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/RFI_Generation_Status_For_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>RFI_Generation_Status_For_Email_Template__c</fullName>
    <formula>IF( OR(ISPICKVAL( RFI_Generated_for_CA_Report__c , &#39;Completed - Error&#39;), ISPICKVAL( RFI_Generated_for_CO_Report__c , &#39;Completed - Error&#39;)), &#39;not generated, please contact your administrator&#39;, IF( AND(ISPICKVAL( RFI_Generated_for_CA_Report__c , &#39;Completed&#39;), ISPICKVAL( RFI_Generated_for_CO_Report__c , &#39;Completed&#39;)), &#39;generated successfully, kindly review RFI against Plant Asset&#39;, &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Generation Status For Email Template</label>
    <type>Text</type>
</CustomField>