unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/RFI_PE_Process_Description__c.field-meta.xml
<CustomField>
    <fullName>RFI_PE_Process_Description__c</fullName>
    <label>RFI PE Process Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>