unpackaged/main/default/objects/Plant_Asset_Prompt_Detail__c/fields/Validate_On_Previous__c.field-meta.xml
<CustomField>
    <fullName>Validate_On_Previous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate On Previous</label>
    <type>Checkbox</type>
</CustomField>